bug: fixed line height spacing for practice links in sidebara

--- a/client/app/src/styles/utils/spacing-and-fonts.scss
+++ b/client/app/src/styles/utils/spacing-and-fonts.scss
@@ -11,6 +11,10 @@
 .mb--10 {
   margin-bottom: -10px;
 }
+.mb--7px--lh-22 {
+  margin-bottom: 7px;
+  line-height: 22px;
+}
 
 .mt-sm-6 {
   margin-top: 4em;
